added reset, game saving, CSS

--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 * {
   box-sizing: border-box;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 body {
   margin: 0px;
+  background-image: url(./images/background.jpeg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size:cover;
 }
 .column-container {
   display: flex;
@@ -37,11 +44,21 @@ body {
   position: relative;
   background-color: white;
   top: 8px;
+  padding: 8px;
+  border-radius: 8px;
+  border: black 3px solid
 }
 #big_coffee {
   user-select: none;
   font-size: 128px;
   cursor: pointer;
+  height: auto;
+  width: 200px;
+  text-align: center;
+}
+
+#big_coffee:hover, .producer:hover {
+  background-color: rgb(190, 64, 22);
 }
 
 .counter-container {
@@ -51,6 +68,7 @@ body {
 
 .cps-container {
   font-size: 20px;
+  margin-bottom: 10px
 }
 
 #producer_container {
@@ -67,6 +85,7 @@ body {
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
+  background-color: white;
 }
 .producer-column {
   display: flex;
@@ -81,4 +100,22 @@ body {
 .producer button {
   font-size: 15px;
   width: 50px;
+}
+
+.counter-container, .cps-container, #big_coffee {
+  padding: 8px;
+  border-radius: 8px;
+  border: solid black 3px;
+  background-color: white;
+}
+
+.right{
+  background-color: white;
+}
+
+.reset{
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  font-size: 15px;
 }
