--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   text-align: center;
 }
 
-#big_coffee:hover, .producer:hover {
+#big_coffee:hover, .producer:hover, #extra_cpc:hover {
   background-color: rgb(190, 64, 22);
 }
 
@@ -102,7 +102,7 @@ body {
   width: 50px;
 }
 
-.counter-container, .cps-container, #big_coffee {
+.counter-container, .cps-container, #big_coffee, #extra_cpc, #cpc_container {
   padding: 8px;
   border-radius: 8px;
   border: solid black 3px;
@@ -118,4 +118,22 @@ body {
   top: 10px;
   left: 20px;
   font-size: 15px;
+}
+
+.button-box {
+  display:flex;
+  gap: 10px;
+}
+
+#extra_cpc{
+  position: relative;
+  top: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
+#cpc_container{
+  position: relative;
+  top: 20px;
+  text-align: center
 }
